Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8, 6.9
-
None
-
-
bff887184 (dev), 841f099fd (6.8)
-
Multimedia wk 47-48
Description
When starting the mediaplayerexample app, it is supposed to automatically start playing the Qt_LogoMergeEffect.mp4. On latest dev, the video does not start playing automatically.
Observations:
- Even if the video is not playing, the "play/pause" button is showing the "pause" icon.
- If I click the the "pause" icon, the video starts playing, and the "pause" icon is still showing. Now this is as expected.
- processBusMessageApplication does not receive a GST_PLAY_STATE_PLAYING state when starting the application. It does not come until the "pause/play" button is pushed.
- The player behaves the same when opening a new media file, the only difference is that the "play" icon is shown in the "play/pause" button.
- If I open another file while the media player is playing a video, video playback stops, but the player continues to show the paused video that I previously watched until I push the "play/pause" button.
Attachments
Issue Links
- is duplicated by
-
QTBUG-131568 [Boot2Qt] Autoplay stopped working in QML Media Player example
-
- Closed
-