Call gst_play_set_uri before discovery in setMedia()

This ensures that GstPlay knows which URI to call if Play is called
from slots during discovery. In the mediaplayerexample, play() is
called from the onTracksChanged handler.

Fixes: QTBUG-131495
Change-Id: I31d28240a50b65bc55e03394ddca44b10444d0b5
Reviewed-by: Tim Blechmann <tim.blechmann@qt.io>
(cherry picked from commit bff887184e1afd6ac82e20cf1335b399e348af4e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>